--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <h1 class="text-center mt-5">Movies Website</h1>
-            <form id="movieForm" autocomplete="on">
+            <form id="movieForm" autocomplete="off">
                 <div class="form-group">
                     <label for="Movie">Movie Name</label>
                     <input class="form-control" type="text" id="movie" placeholder="Movie...">
