--- a/search.html
+++ b/search.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
-        <title>Movie Info App in Javascript</title>
+        <title>Movie website</title>
         <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     </head>
     <body>
         <div class="container">
-            <h1 class="text-center mt-5">Movie Info App</h1>
+            <h1 class="text-center mt-5">Movie website</h1>
             <form id="movieForm" autocomplete="off">
                 <div class="form-group">
                     <label for="Movie">Movie Name</label>
